--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="styles/style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta charset="utf-8"">
 	<title>Practice Form</title>
+	<link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 <body>
 <main>
@@ -51,7 +53,7 @@
 		<label for="attitude"><input type="checkbox" name="positive" value="organized">Organized</label>
 
 		<p>Is there anything else you would like to add?</p>
-		<textarea placeholder="Enter your"></textarea>
+		<textarea placeholder="Write something, fucko!"></textarea>
 
 <br>
 <br>
