--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 </head>
 <body>
 <main>
-	<h1 id="title">How well do you know veterans?</h1>
-	<p id="description">A short survey to see how familiar you are the US military veteran community.</p>
 	
+	<header>
+		<h1 id="title">How well do you know veterans?</h1>
+		<p id="description">A short survey to see how familiar you are the US military veteran community.</p>
+	</header>
+
 	<form id="survey-form">
 		<p>Name:</p>
 		<label id="name-label">
