added more impressions

--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@
 								<li class="checkbox"><label><input type="checkbox" name="attitude" value="4">Reliable</label></li>
 								<li class="checkbox"><label><input type="checkbox" name="attitude" value="5">Punctual</label></li>
 								<li class="checkbox"><label><input type="checkbox" name="attitude" value="6">Organized</label></li>
+								<li class="checkbox"><label><input type="checkbox" name="attitude" value="6">Entitled</label></li>
+								<li class="checkbox"><label><input type="checkbox" name="attitude" value="6">Moral</label></li>
 							</ul>
 						</div>
 					</div>
